05_kubernetes/03_Session3_Application_Deployment/016-adding-a-database/manifests/03-web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: lab016
spec:
  selector:
    app: web
  ports:
    - name: http
      port: 3000
      targetPort: http
