05_kubernetes/03_Session3_Application_Deployment/016-adding-a-database/manifests/10-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: lab016
spec:
  selector:
    app: db
  ports:
    - name: postgres
      port: 5432
      targetPort: postgres
